--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
+  "build": "CI=false && react-scripts build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
